# jupyter-interpreter-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
openspec/: project.md
openspec/changes/archive/2026-01-02-setup-precommit-hooks/: proposal.md
openspec/changes/archive/2026-01-02-setup-precommit-hooks/specs/code-quality/: spec.md
openspec/changes/archive/2026-01-02-setup-uv-packaging/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-setup-uv-packaging/specs/packaging/: spec.md
openspec/changes/setup-precommit-hooks/: tasks.md
openspec/specs/code-quality/: spec.md
openspec/specs/packaging/: spec.md
src/jupyter_interpreter_mcp/: __main__.py  editing.py  notebook.py  remote.py  server.py  session.py
test/integration/: test_file_tools_integration.py  test_list_dir.py  test_server_startup.py  test_session_restore_real_server.py
test/unit/: test_editing.py  test_file_tools.py  test_filesystem_tool.py  test_notebook.py  test_remote.py  test_server.py  test_session.py  test_session_restoration.py
